--- a/single.html
+++ b/single.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <title>single</title>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,14 +45,15 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1 class="navbar-brand"><a  href="index.html">Yummy</a></h1>
+					<h1 class="navbar-brand1"><img alt="书淘" src="images/book-logo.png"></h1>
 				</div>
 				<!--navbar-header-->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse"
+					id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="index.html" class="active">Home</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Birthday<b class="caret"></b></a>
+						<li><a href="index.html" class="active">首页</a></li>
+						<li class="dropdown"><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown">分类<b class="caret"></b></a>
 							<ul class="dropdown-menu multi-column columns-4">
 								<div class="row">
 									<div class="col-sm-3">
@@ -64,7 +66,7 @@
 											<li><a class="list" href="products.html">Kids</a></li>
 											<li><a class="list" href="products.html">Parents</a></li>
 										</ul>
-									</div>																		
+									</div>
 									<div class="col-sm-3">
 										<h4>By Flavour</h4>
 										<ul class="multi-column-dropdown">
@@ -73,16 +75,21 @@
 											<li><a class="list" href="products.html">Butterscotch</a></li>
 											<li><a class="list" href="products.html">Strawberry</a></li>
 											<li><a class="list" href="products.html">Vanilla</a></li>
-											<li><a class="list" href="products.html">Eggless Cakes</a></li>
+											<li><a class="list" href="products.html">Eggless
+													Cakes</a></li>
 										</ul>
 									</div>
 									<div class="col-sm-3">
 										<h4>By Theme</h4>
 										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Heart shaped</a></li>
-											<li><a class="list" href="products.html">Cartoon Cakes</a></li>
-											<li><a class="list" href="products.html">2-3 Tier Cakes</a></li>
-											<li><a class="list" href="products.html">Square shape</a></li>
+											<li><a class="list" href="products.html">Heart
+													shaped</a></li>
+											<li><a class="list" href="products.html">Cartoon
+													Cakes</a></li>
+											<li><a class="list" href="products.html">2-3 Tier
+													Cakes</a></li>
+											<li><a class="list" href="products.html">Square
+													shape</a></li>
 											<li><a class="list" href="products.html">Round shape</a></li>
 											<li><a class="list" href="products.html">Photo cakes</a></li>
 										</ul>
@@ -99,152 +106,7 @@
 										</ul>
 									</div>
 								</div>
-							</ul>
-						</li>
-					   <li class="dropdown grid">
-							<a href="#" class="dropdown-toggle list1" data-toggle="dropdown">Wedding<b class="caret"></b></a>
-							<ul class="dropdown-menu multi-column columns-4">
-								<div class="row">
-									<div class="col-sm-3">
-										<h4>By Relation</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Friend</a></li>
-											<li><a class="list" href="products.html">Lover</a></li>
-											<li><a class="list" href="products.html">Sister</a></li>
-											<li><a class="list" href="products.html">Brother</a></li>
-											<li><a class="list" href="products.html">Kids</a></li>
-											<li><a class="list" href="products.html">Parents</a></li>
-										</ul>
-									</div>																		
-									<div class="col-sm-3">
-										<h4>By Flavour</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Chocolate</a></li>
-											<li><a class="list" href="products.html">Mixed Fruit</a></li>
-											<li><a class="list" href="products.html">Butterscotch</a></li>
-											<li><a class="list" href="products.html">Strawberry</a></li>
-											<li><a class="list" href="products.html">Vanilla</a></li>
-											<li><a class="list" href="products.html">Eggless Cakes</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3">
-										<h4>By Theme</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Heart shaped</a></li>
-											<li><a class="list" href="products.html">Cartoon Cakes</a></li>
-											<li><a class="list" href="products.html">2-3 Tier Cakes</a></li>
-											<li><a class="list" href="products.html">Square shape</a></li>
-											<li><a class="list" href="products.html">Round shape</a></li>
-											<li><a class="list" href="products.html">Photo cakes</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3">
-										<h4>Weight</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">1 kG</a></li>
-											<li><a class="list" href="products.html">1.5 kG</a></li>
-											<li><a class="list" href="products.html">2 kG</a></li>
-											<li><a class="list" href="products.html">3 kG</a></li>
-											<li><a class="list" href="products.html">4 kG</a></li>
-											<li><a class="list" href="products.html">Large</a></li>
-										</ul>
-									</div>
-								</div>
-							</ul>
-						</li>				
-						<li class="dropdown grid">
-							<a href="#" class="dropdown-toggle list1" data-toggle="dropdown">Special Offers <b class="caret"></b></a>
-							<ul class="dropdown-menu multi-column columns-4">
-								<div class="row">
-									<div class="col-sm-3">
-										<h4>By Relation</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Friend</a></li>
-											<li><a class="list" href="products.html">Lover</a></li>
-											<li><a class="list" href="products.html">Sister</a></li>
-											<li><a class="list" href="products.html">Brother</a></li>
-											<li><a class="list" href="products.html">Kids</a></li>
-											<li><a class="list" href="products.html">Parents</a></li>
-										</ul>
-									</div>																		
-									<div class="col-sm-3">
-										<h4>By Flavour</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Chocolate</a></li>
-											<li><a class="list" href="products.html">Mixed Fruit</a></li>
-											<li><a class="list" href="products.html">Butterscotch</a></li>
-											<li><a class="list" href="products.html">Strawberry</a></li>
-											<li><a class="list" href="products.html">Vanilla</a></li>
-											<li><a class="list" href="products.html">Eggless Cakes</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3">
-										<h4>By Theme</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Heart shaped</a></li>
-											<li><a class="list" href="products.html">Cartoon Cakes</a></li>
-											<li><a class="list" href="products.html">2-3 Tier Cakes</a></li>
-											<li><a class="list" href="products.html">Square shape</a></li>
-											<li><a class="list" href="products.html">Round shape</a></li>
-											<li><a class="list" href="products.html">Photo cakes</a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3">
-										<h4>Weight</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">1 kG</a></li>
-											<li><a class="list" href="products.html">1.5 kG</a></li>
-											<li><a class="list" href="products.html">2 kG</a></li>
-											<li><a class="list" href="products.html">3 kG</a></li>
-											<li><a class="list" href="products.html">4 kG</a></li>
-											<li><a class="list" href="products.html">Large</a></li>
-										</ul>
-									</div>
-								</div>
-							</ul>
-						</li>
-						<li class="dropdown grid">
-							<a href="#" class="dropdown-toggle list1" data-toggle="dropdown">Store<b class="caret"></b></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="row">
-									<div class="col-sm-4">
-										<h4>By Relation</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Friend</a></li>
-											<li><a class="list" href="products.html">Lover</a></li>
-											<li><a class="list" href="products.html">Sister</a></li>
-											<li><a class="list" href="products.html">Brother</a></li>
-											<li><a class="list" href="products.html">Kids</a></li>
-											<li><a class="list" href="products.html">Parents</a></li>
-										</ul>
-									</div>																		
-									<div class="col-sm-4">
-										<h4>By Flavour</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Chocolate</a></li>
-											<li><a class="list" href="products.html">Mixed Fruit</a></li>
-											<li><a class="list" href="products.html">Butterscotch</a></li>
-											<li><a class="list" href="products.html">Strawberry</a></li>
-											<li><a class="list" href="products.html">Vanilla</a></li>
-											<li><a class="list" href="products.html">Eggless Cakes</a></li>
-										</ul>
-									</div>								
-									<div class="col-sm-4">
-										<h4>Specials</h4>
-										<ul class="multi-column-dropdown">
-											<li><a class="list" href="products.html">Ice cream cake</a></li>
-											<li><a class="list" href="products.html">Swiss roll</a></li>
-											<li><a class="list" href="products.html">Ruske kape</a></li>
-											<li><a class="list" href="products.html">Cupcakes</a></li>
-											<li><a class="list" href="products.html">Muffin</a></li>
-											<li><a class="list" href="products.html">Merveilleux</a></li>										
-										</ul>
-									</div>
-								</div>
-							</ul>
-						</li>								
-					</ul> 
-					<!--/.navbar-collapse-->
+							</ul></li>
 				</div>
 				<!--//navbar-header-->
 			</nav>
@@ -542,20 +404,10 @@
 		</div>
 	</div>
 	<!--related-products-->
-	<!--footer-->
+		<!--footer-->
 	<div class="footer">
 		<div class="container">
 			<div class="footer-grids">
-				<div class="col-md-2 footer-grid">
-					<h4>company</h4>
-					<ul>
-						<li><a href="products.html">products</a></li>
-						<li><a href="#">Work Here</a></li>
-						<li><a href="#">Team</a></li>
-						<li><a href="#">Happenings</a></li>
-						<li><a href="#">Dealer Locator</a></li>
-					</ul>
-				</div>
 				<div class="col-md-2 footer-grid">
 					<h4>service</h4>
 					<ul>
@@ -565,40 +417,18 @@
 						<li><a href="contact.html">Contact Us</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 footer-grid">
-					<h4>order & returns</h4>
-					<ul>
-						<li><a href="#">Order Status</a></li>
-						<li><a href="#">Shipping Policy</a></li>
-						<li><a href="#">Return Policy</a></li>
-						<li><a href="#">Digital Gift Card</a></li>
-					</ul>
-				</div>
-				<div class="col-md-2 footer-grid">
-					<h4>legal</h4>
-					<ul>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Terms and Conditions</a></li>
-						<li><a href="#">Social Responsibility</a></li>
-					</ul>
-				</div>
 				<div class="col-md-3 footer-grid icons">
 					<h4>Connect with Us</h4>
-					<ul>
-						<li><a href="#"><img src="images/i1.png" alt=""/>Follow us on Facebook</a></li>
-						<li><a href="#"><img src="images/i2.png" alt=""/>Follow us on Twitter</a></li>
-						<li><a href="#"><img src="images/i3.png" alt=""/>Follow us on Google-plus</a></li>
-						<li><a href="#"><img src="images/i4.png" alt=""/>Follow us on Pinterest</a></li>
-					</div>
 				</div>
-				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
-	<!--footer-->
+	</div>
+	<!--//footer-->
 	<div class="footer-bottom">
 		<div class="container">
-			<p>Copyright &copy; 2015.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+			<p>Copyright &copy; 2015.Company name All rights reserved.</p>
 		</div>
 	</div>
+	</body>
 </html>
