--- a/books.html
+++ b/books.html
@@ -590,7 +590,7 @@
 	<!--footer-->
 	<div class="footer">
 		<div class="container">
-			<div class="footer-grids">
+			<div class="footer-grids" style="width:100%;">
 				<div class="col-md-2 footer-grid">
 					<ul>
 						<li><a href="#">帮助</a></li>
