--- a/account.html
+++ b/account.html
@@ -153,7 +153,7 @@
 						<h3>个人信息</h3>
 						<div class="input">
 							<span>昵称<label>*</label></span>
-							<input type="text"> 
+							<input type="text" id="userName"> 
 						</div>
 						<div class="input">
 							<span>手机号码<label>*</label></span>
@@ -180,7 +180,7 @@
 				<div class="clearfix"> </div>
 				<div class="register-but">
 				   <form>
-					   <input type="submit" value="注册">
+					   <input type="submit" value="注册" onClick="Register()">
 					   <div class="clearfix"> </div>
 				   </form>
 				</div>
@@ -212,5 +212,6 @@
 			<p>Copyright &copy; 2015.Company name All rights reserved.</p>
 		</div>
 	</div>
+	<script type="text/javascript" src="js/Register.js"></script>
 </body>
 </html>
