--- a/books.html
+++ b/books.html
@@ -593,7 +593,7 @@
 			<div class="footer-grids" style="width:100%;">
 				<div class="col-md-2 footer-grid">
 					<ul>
-						<li><a href="#">帮助</a></li>
+						<li><a href="support.html">帮助</a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 footer-grid icons">
