--- a/FAQ.html
+++ b/FAQ.html
@@ -198,12 +198,12 @@
 			<div class="footer-grids">
 				<div class="col-md-2 footer-grid">
 					<ul>
-						<li><a href="#">帮助</a></li>
+						<li><a href="support.html">帮助</a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 footer-grid icons">
 					<ul>
-						<li><a href="FAQ.html">FAQ</a></li>
+						<li><a href="#">FAQ</a></li>
 					</ul>
 				</div>
 			</div>
