--- a/UserInfo.html
+++ b/UserInfo.html
@@ -175,7 +175,7 @@
 			<div class="footer-grids">
 				<div class="col-md-2 footer-grid">
 					<ul>
-						<li><a href="#">帮助</a></li>
+						<li><a href="support.html">帮助</a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 footer-grid icons">
