--- a/account.html
+++ b/account.html
@@ -157,11 +157,11 @@
 						</div>
 						<div class="input">
 							<span>手机号码<label>*</label></span>
-							<input type="text"> 
+							<input type="text" id="phone"> 
 						</div>
 						<div class="input">
 							<span>邮箱地址<label>*</label></span>
-							<input type="text"> 
+							<input type="text" id="email"> 
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -180,7 +180,7 @@
 				<div class="clearfix"> </div>
 				<div class="register-but">
 				   <form>
-					   <input type="submit" value="注册" onClick="Register()">
+					   <a type="submit" onClick="Register()">注册</a>
 					   <div class="clearfix"> </div>
 				   </form>
 				</div>
@@ -194,7 +194,7 @@
 			<div class="footer-grids">
 				<div class="col-md-2 footer-grid">
 					<ul>
-						<li><a href="#">帮助</a></li>
+						<li><a href="support.html">帮助</a></li>
 					</ul>
 				</div>
 				<div class="col-md-3 footer-grid icons">
