--- a/account.html
+++ b/account.html
@@ -180,7 +180,7 @@
 				<div class="clearfix"> </div>
 				<div class="register-but">
 				   <form>
-					   <a type="submit" onClick="Register()">注册</a>
+					   <input type="button" value="注册" onClick="Register()">
 					   <div class="clearfix"> </div>
 				   </form>
 				</div>
