--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/account.css" type="text/css" rel="stylesheet" media="all">
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -162,17 +163,15 @@
 		<!--footer-->
 	<div class="footer">
 		<div class="container">			
-			<div class="row-fluid" >				
-				<div class="span2  offset4 footer-grid" >
-					<ul>
-						<li><a href="support.html">帮助</a></li>
-					</ul>
-				</div>
-				<div class="span2  footer-grid icons" style="margin: 0px;">
-					<ul>
-						<li style="margin-bottom: 0px;margin-top: 0px;"><a href="FAQ.html" style="float:right;">FAQ</a></li>
-					</ul>
-				</div>				
+			<div class="row-fluid" >		
+				<table style="width: 100%">
+					<tr>
+					<td style="width: 25%"></td>
+					<td style="width: 25%" class="faqa"><a href="support.html"  style="float:left;">帮助</a></td>
+					<td style="width: 25%" class="faqa"><a href="FAQ.html" style="float:right;">FAQ</a></td>
+					<td style="width: 25%"></td>
+					</tr>
+				</table>	
 			</div>			
 		</div>
 	</div>
