--- a/account.html
+++ b/account.html
@@ -161,7 +161,7 @@
 						</div>
 						<div class="input">
 							<span>邮箱地址<label>*</label></span>
-							<input type="text" id="email"> 
+							<input type="text" id="email1"> 
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -169,11 +169,11 @@
 						<h3>登录信息</h3>
 						<div class="input">
 							<span>密码<label>*</label></span>
-							<input type="password">
+							<input type="password" id="password0">
 						</div>
 						<div class="input">
 							<span>确认密码<label>*</label></span>
-							<input type="password">
+							<input type="password" id="password1">
 						 </div>
 					</div>
 				</form>
