--- a/UserInfo.html
+++ b/UserInfo.html
@@ -15,6 +15,7 @@
 	media="all">
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/account.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/tb.css" type="text/css" rel="stylesheet" media="all">
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -48,9 +49,9 @@
 						<li><a href="index.html" class="active">首页</a></li>
 						<li class="dropdown"><a href="#" class="dropdown-toggle"
 							data-toggle="dropdown">分类<b class="caret"></b></a>
-							<ul class="dropdown-menu multi-column columns-4">
+							<ul class="dropdown-menu multi-column columns-4" style="min-width: 840px;">
 								<div class="row">
-									<div class="col-sm-3">
+									<div class="col-sm-2">
 										<h4>By Relation</h4>
 										<ul class="multi-column-dropdown">
 											<li><a class="list" href="books.html">Friend</a></li>
@@ -61,7 +62,7 @@
 											<li><a class="list" href="books.html">Parents</a></li>
 										</ul>
 									</div>
-									<div class="col-sm-3">
+									<div class="col-sm-2">
 										<h4>By Flavour</h4>
 										<ul class="multi-column-dropdown">
 											<li><a class="list" href="books.html">Chocolate</a></li>
@@ -73,7 +74,7 @@
 													Cakes</a></li>
 										</ul>
 									</div>
-									<div class="col-sm-3">
+									<div class="col-sm-2">
 										<h4>By Theme</h4>
 										<ul class="multi-column-dropdown">
 											<li><a class="list" href="books.html">Heart
@@ -88,7 +89,29 @@
 											<li><a class="list" href="books.html">Photo cakes</a></li>
 										</ul>
 									</div>
-									<div class="col-sm-3">
+									<div class="col-sm-2">
+										<h4>Weight</h4>
+										<ul class="multi-column-dropdown">
+											<li><a class="list" href="books.html">1 kG</a></li>
+											<li><a class="list" href="books.html">1.5 kG</a></li>
+											<li><a class="list" href="books.html">2 kG</a></li>
+											<li><a class="list" href="books.html">3 kG</a></li>
+											<li><a class="list" href="books.html">4 kG</a></li>
+											<li><a class="list" href="books.html">Large</a></li>
+										</ul>
+									</div>
+									<div class="col-sm-2">
+										<h4>Weight</h4>
+										<ul class="multi-column-dropdown">
+											<li><a class="list" href="books.html">1 kG</a></li>
+											<li><a class="list" href="books.html">1.5 kG</a></li>
+											<li><a class="list" href="books.html">2 kG</a></li>
+											<li><a class="list" href="books.html">3 kG</a></li>
+											<li><a class="list" href="books.html">4 kG</a></li>
+											<li><a class="list" href="books.html">Large</a></li>
+										</ul>
+									</div>
+									<div class="col-sm-2">
 										<h4>Weight</h4>
 										<ul class="multi-column-dropdown">
 											<li><a class="list" href="books.html">1 kG</a></li>
@@ -143,8 +166,33 @@
 	<!--//header-->
 	<!--banner-->
 	<div class="banner">
+	<div class="theme-morning hp-common-header">
 		<div class="container">
-			
+			<div class="row" style="margin-top: 10px;">
+				<h4 style="margin-left:auto;margin-right: auto; margin-bottom:0px; width: 990px;"><a style="border:0px;">个人主页</a></h4>
+			</div>
+			<div class="row">
+				<div class="cm-bd">
+					<div class="hp-user-info">
+						<div class="hd">
+							<img class="user-pic" src="images/tbuser.jpg">
+						</div>
+						<div class="bd">
+							<div class="info">
+								<p class="line"><strong class="name">用户名</strong></p>
+								<p class="line"></p>
+								<div class="line">性别</div>
+							</div>
+							<div class="sns">
+								<p class="line edit-btn" style="letter-spacing: 0px;">
+									<a class="edit" style="font-size: 14px;border: 0px;">编辑资料</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		</div>
 	</div>
 	<!--//banner-->
