--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
 <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
 <link href="css/account.css" type="text/css" rel="stylesheet" media="all">
+<link href="css/index.css" type="text/css" rel="stylesheet" media="all">
 <!-- js -->
 <script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
@@ -146,9 +147,33 @@
 		<div class="subscribe">
 			<div class="container">
 				<form>
-					<input type="text" class="text" value="" onfocus="this.value = '';"
-						onblur="if (this.value == '') {this.value = '';}"> <input
-						type="submit" value="搜索">
+				<table style="width: 100%;">
+					<tr>
+						<td style="width: 20%;">
+							<div class="dropdown searchtype " ><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown" id="selectsubject">书名<b class="caret"></b></a>
+								<ul class="dropdown-menu multi-column columns-1">
+									<div class="row">
+										<h4 style="margin-left: 10px;">查找类别</h4>
+										<ul class="multi-column-dropdown">
+										<li class="searchtype"><a class="list" style="margin-left: 10px;" onclick="select(this)">作者</a></li>
+										<li class="searchtype"><a class="list" style="margin-left: 10px;" onclick="select(this)">书名</a></li>
+										<li class="searchtype"><a class="list" style="margin-left: 10px;" onclick="select(this)">出版社</a></li>
+										<li class="searchtype"><a class="list" style="margin-left: 10px;" onclick="select(this)">书籍编号</a></li>
+										</ul>																								
+								</div>
+							</ul>
+							</div>
+						</td>
+						<td style="width: 55%;">
+							<input type="text" class="text" id="searchinput" style="width:100%;"> 
+						</td>
+						<td style="width: 25%;">
+							<input type="button" style="width:100%;" value="搜索" onclick="SearchBook()">
+						</td>
+					</tr>
+				</table>
+			
 				</form>
 			</div>
 		</div>
@@ -183,4 +208,5 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="index.js"></script>
 </html>
