注册功能基本完成

--- a/account.html
+++ b/account.html
@@ -162,7 +162,8 @@
 						<h3>登录信息</h3>
 						<div class="input">
 							<span>密码<label>*</label></span>
-							<input type="password" id="password0">
+							<input type="password" id="password0" >
+							<span>密码不少于6位</span>
 						</div>
 						<div class="input">
 							<span>确认密码<label>*</label></span>
@@ -174,6 +175,7 @@
 				<div class="register-but">
 				   <form>
 					   <input type="button" value="注册" onClick="Register()">
+					   <a id="msg"></a>
 					   <div class="clearfix"> </div>
 				   </form>
 				</div>
