--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 									<label for="password">Password</label>
 									<input type="password" name="password" id="password">
 								</fieldset>
-								<input type="submit" id="login" value="Sign in">
+								<input type="button" id="login" value="Sign in" onClick="Login()">
 								<label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
+								<a>ddd</a>
 							</fieldset>
 							<p>New User ? <a class="sign" href="account.html">Sign Up</a> <span><a href="#">Forgot your password?</a></span></p>
 						</form>
@@ -209,4 +210,5 @@
 	</div>
 </body>
 <script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="js/Login.js"></script>
 </html>
