--- a/index.html
+++ b/index.html
@@ -222,4 +222,5 @@
 </body>
 <script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" src="js/Login.js"></script>
+<script type="text/javascript" src="js/Logout.js"></script>
 </html>
