--- a/UserInfo.html
+++ b/UserInfo.html
@@ -305,10 +305,10 @@
 							<div class="bd">
 								<div class="info">
 									<p class="line">
-										<strong class="name">用户名</strong>
+										<strong class="name" id="username">用户名</strong>
 									</p>
 									<p class="line"></p>
-									<div class="line">性别&nbsp;&nbsp;&nbsp;&nbsp;年龄</div>
+									<div class="line" id="userinfomation">性别&nbsp;&nbsp;&nbsp;&nbsp;年龄</div>
 								</div>
 								<div class="sns">
 									<p class="line edit-btn" style="letter-spacing: 0px;">
@@ -1389,4 +1389,5 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="js/UserInfo.js"></script>
 </html>
