--- a/single.html
+++ b/single.html
@@ -253,5 +253,6 @@
 		</div>
 	</div>
 </body>
+<script type="text/javascript" src="js/books.js"></script>
 <script type="text/javascript" src="js/single.js"></script>
 </html>
